--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -9,13 +9,17 @@
 @scripts = {
     <script type="text/javascript" src="@routes.Assets.at("scripts/shared/draggable.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/browser/browser.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/charts/charts.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramViewModel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/shared/shared.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/popup/popupService.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/modal/modal.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramController.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/app.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/services/diagramService.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/views/analyticControllers.js")"></script>
 }
 
 @main(title)(styles)(scripts){
