--- a/studio/app/views/main.scala.html
+++ b/studio/app/views/main.scala.html
@@ -21,5 +21,6 @@
     <script type="text/javascript" src="@routes.Assets.at("lib/angularjs/angular-animate.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap.min.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("lib/angular-ui-bootstrap/ui-bootstrap-tpls.min.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("lib/d3/d3.min.js")"></script>
     @scripts
 </html>
