--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -32,8 +32,6 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 #studio-canvases.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
 .diagram-container { position: relative; width: 100%; height: 100%; overflow-y: scroll; }
 
-.library-controls { position: absolute; top: 15px; left: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
-
 #library-browser{
     position: absolute;
     z-index: 1000;
@@ -73,9 +71,15 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 #browser-container { position: relative; width: 100%; height: 100%; overflow-x: hidden; }
 
-.studio-controls { position: absolute; top: 15px; right: 15px; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
+/* studio canvas controls */
+.studio-controls { position: absolute; box-shadow: 0px 6px 12px rgba(0,0,0,0.125); z-index: 2; }
 .studio-controls button { width: 40px; }
-button.diagram-evaluating { color: #2ca02c; }
+.studio-controls.ng-leave { -webkit-animation: fadeOut 0.6s; }
+.studio-controls.ng-enter { -webkit-animation: fadeIn 0.6s; }
+#library-controls { top: 15px; left: 15px; }
+#offline-controls, #online-controls { top: 15px; right: 15px; }
+#offline-controls button.diagram-evaluating { color: #2ca02c; }
+#grouping-controls { top: 70px; right: 15px; }
 
 #studio-wrapper.show-sidebar {
     -webkit-transform: translateX(200px);
@@ -295,4 +299,69 @@ button.diagram-evaluating { color: #2ca02c; }
 
 .span-text {
     font-size: 0.9em;
+}
+
+/* modal directive */
+.emr-modal { background-color: #f9f9f9; position: absolute; border: 1px solid #e5e5e5; -webkit-transform: scale(0.01); border-radius: 15px; z-index: 1150; box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.175); }
+.emr-modal-header, .emr-modal-footer { position: relative; font-weight: bold; width: 100%; line-height: 60px; height: 60px; vertical-align: middle; }
+.emr-modal-body { position: relative; background-color: #fff; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; width: 100%; height: -webkit-calc(100% - 120px); height: calc(100% - 120px); margin: 0; overflow: hidden; }
+.emr-modal-footer { text-align: right; padding-right: 20px; }
+.emr-modal-footer .btn+.btn { margin-left: 20px; }
+
+/* charts view */
+#charts-container { height: 100%; width: 100%; margin: 0; padding: 0; }
+
+#chart-tabs { display: block; position: relative; float: left; height: 100%; width: 70px; margin: 0; padding: 0; background-color: #e5e5e5; }
+.vertical-tabs { list-style-type: none; margin: 0; padding: 0; }
+.vertical-tab { text-align: center; margin: 5px 0 5px 5px; padding: 5px 0 5px 0; color: #666; cursor: pointer; border-radius: 6px 0 0 6px; border-top: 1px solid transparent; border-bottom: 1px solid transparent; border-left: 1px solid transparent; }
+.vertical-tab:hover { color: #3182bd; }
+.vertical-tab.active { background-color: #f9f9f9; }
+.tab-icon { margin: 0; padding: 0; }
+.tab-text { margin: 0; padding: 0; font-size: 0.8em; }
+
+#chart-section { display: block; position: relative; float: left; height: 100%; width: -webkit-calc(100% - 70px); }
+
+#chart-menus { position: absolute; top: 0; left: 0; background-color: #f9f9f9; height: 100%; width: 25%; border-right: 1px solid #e5e5e5; }
+.chart-menu-container { position: absolute; top: 28px; left: 0; visibility: hidden; height: -webkit-calc(100% - 28px); width: 100%; overflow-x: hidden; overflow-y: auto; }
+.chart-menu-container.active { visibility: visible; }
+.chart-menu { width: 100%; }
+.chart-feature { position: relative; background-color: #fff; margin: 10px; padding: 10px; border: 1px solid #e9e9e9; color: #666; }
+.feature-color { float: left; width: 28px; height: 28px; border-radius: 50%; color: #f9f9f9; line-height: 28px; text-align: center; vertical-align: middle; cursor: pointer; }
+.feature-name { float: left; margin-left: 10px; line-height: 28px; vertical-align: middle; }
+.feature-ellipsis { float: right; line-height: 28px; vertical-align: middle; }
+.feature-stats { clear: both; }
+
+.chart-toolbar { position: absolute; top: 0; left: 0; width: 100%; margin: 0; padding: 4px 16px 4px 10px; }
+.toolbar-left { position: relative; float: left; }
+.toolbar-right { position: relative; float: right; }
+.toolbar-icon { position: relative; height: 21px; width: 21px; color: #666; cursor: pointer; }
+.toolbar-icon:hover { color: #3182bd; }
+.toolbar-icon i { font-size: 20px; }
+#collapse-icon { position: relative; height: 100%; }
+#collapse-icon:before, #collapse-icon:after { content: ""; position: absolute; top: 0; left: 50%; width: 2px; height: 100%; background-color: #666; }
+#collapse-icon:before { -webkit-transform: rotate(45deg); }
+#collapse-icon:after { -webkit-transform: rotate(-45deg); }
+#collapse-icon:hover:before, #collapse-icon:hover:after { background-color: #3182bd; }
+
+#chart-content { position: absolute; top: 0; right: 0; height: 100%; width: 75%; }
+#chart-content .chart-toolbar { background-color: #f9f9f9; border-bottom: 1px solid #e9e9e9; }
+
+#chart-container { position: absolute; top: 28px; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
+#time-series-chart { display: block; position: relative; width: 100%; height: 100%; }
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
+.x.axis path {
+    display: none;
+}
+
+.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
 }
