--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -368,3 +368,13 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
     stroke: steelblue;
     stroke-width: 1.5px;
 }
+
+.rendering-spin-container {
+    position: absolute;
+    padding: 30px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    z-index: 1000;
+    color: #3182bd;
+}
