Introduced block grouping feature.

--- a/studio/public/templates/studio.html
+++ b/studio/public/templates/studio.html
@@ -109,7 +109,7 @@
                 </div>
 
                 <div ng-if="selectionCount > 1" id="grouping-controls" class="studio-controls">
-                    <button type="button" class="btn btn-default" ng-click="onBlockGrouping($event)">
+                    <button type="button" class="btn btn-default" ng-click="onGroup($event)">
                         <i class="fa fa-compress"></i>
                     </button>
                 </div>
