Updated chart directive to use the html5 canvas.

--- a/studio/public/scripts/views/blockGroup.html
+++ b/studio/public/scripts/views/blockGroup.html
@@ -1,1 +1,3 @@
-<div></div>
+<div class="diagram-container">
+    <diagram view-model="nestedDiagram" style="width: 100%; height: 1000px;"></diagram>
+</div>
