--- a/studio/public/scripts/views/charts.html
+++ b/studio/public/scripts/views/charts.html
@@ -64,11 +64,12 @@
 
             <div id="chart-container">
 
-                <div class="rendering-spin-container">
-                    <i ng-if="rendering" class="fa fa-circle-o-notch fa-spin fa-5x"></i>
+                <div id="loader-overlay" ng-if="rendering" style="background-color: #fff">
+                    <div class="loader"></div>
                 </div>
 
-                <time-series-chart ng-if="!loading" id="time-series-chart" chart-data="chartData"></time-series-chart>
+                <time-series-chart-canvas ng-if="!loading" id="time-series-chart" chart-data="chartData"></time-series-chart-canvas>
+
             </div>
 
         </div>
