--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -30,7 +30,7 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 #offline-canvas { transform: rotateY(0deg); }
 #online-canvas { transform: rotateY(180deg); }
 #studio-canvases.flipped { transform: translateX( -100% ) rotateY( -180deg ); }
-.diagram-container { position: relative; width: 100%; height: 100%; overflow-y: scroll; }
+.diagram-container { position: relative; width: 100%; height: 100%; background-color: #e5e5e5; overflow-y: scroll; }
 
 #library-browser{
     position: absolute;
