--- a/studio/app/views/index.scala.html
+++ b/studio/app/views/index.scala.html
@@ -4,12 +4,14 @@
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/diagram.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/browser/browser.css")">
     <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/blockDataViewer/blockDataViewer.css")">
+    <link rel="stylesheet" media="screen" href="@routes.Assets.at("scripts/components/grids/grids.css")">
 }
 
 @scripts = {
     <script type="text/javascript" src="@routes.Assets.at("scripts/shared/draggable.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/browser/browser.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/charts/charts.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("scripts/components/grids/grids.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagramViewModel.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/diagram/diagram.js")"></script>
     <script type="text/javascript" src="@routes.Assets.at("scripts/components/shared/shared.js")"></script>
