--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -336,10 +336,12 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 .chart-toolbar { position: absolute; top: 0; left: 0; width: 100%; margin: 0; padding: 4px 16px 4px 10px; }
 .toolbar-left { position: relative; float: left; }
+.toolbar-center { float: left; width: calc(100% - 25px); height: 21px; inline-height: 21px; text-align: center; }
 .toolbar-right { position: relative; float: right; }
 .toolbar-icon { position: relative; height: 21px; width: 21px; color: #666; cursor: pointer; }
 .toolbar-icon:hover { color: #3182bd; }
 .toolbar-icon i { font-size: 20px; }
+
 #collapse-icon { position: relative; height: 100%; }
 #collapse-icon:before, #collapse-icon:after { content: ""; position: absolute; top: 0; left: 50%; width: 2px; height: 100%; background-color: #666; }
 #collapse-icon:before { -webkit-transform: rotate(45deg); }
@@ -349,8 +351,10 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 #chart-content { position: absolute; top: 0; right: 0; height: 100%; width: 75%; }
 #chart-content .chart-toolbar { background-color: #f9f9f9; border-bottom: 1px solid #e9e9e9; }
 
-#chart-container { position: absolute; top: 28px; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
+#chart-wrapper { position: absolute; top: 28px; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
+#chart-container { position: absolute; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
 #time-series-chart { display: block; position: relative; width: 100%; height: 100%; }
+#time-series-grid-container { display: block; position: relative; width: 100%; height: 100%; overflow: auto; }
 
 .axis path,
 .axis line {
