--- a/studio/public/scripts/views/charts.html
+++ b/studio/public/scripts/views/charts.html
@@ -45,8 +45,7 @@
                                     <i class="fa fa-check"></i>
                                 </div>
                                 <div class="face back" ng-style="{'background-color':value.color}">
-                                    x
-                                    <!--<i class="fa close"></i>-->
+                                    <i class="fa fa-close"></i>
                                 </div>
                             </div>
 
