--- a/studio/public/scripts/views/charts.html
+++ b/studio/public/scripts/views/charts.html
@@ -17,7 +17,7 @@
 
     <div id="chart-section">
 
-        <div id="chart-menus">
+        <div class="chart-menus chart-menus-fade" ng-show="!hideChartMenus">
 
             <div class="chart-toolbar">
                 <div class="toolbar-center">
@@ -30,7 +30,7 @@
                 </div>
                 <div class="toolbar-right">
                     <div class="toolbar-icon">
-                        <div id="collapse-icon"></div>
+                        <div id="collapse-icon" ng-click="collapseChartMenusClick()"></div>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
         </div>
 
-        <div id="chart-content">
+        <div class="chart-content ng-class:{ expand: hideChartMenus }">
             <div class="chart-toolbar">
                 <div class="toolbar-left">
                     <div class="toolbar-icon" ng-click="render()">
