--- a/studio/public/scripts/components/grids/grids.css
+++ b/studio/public/scripts/components/grids/grids.css
@@ -1,30 +1,45 @@
-.grid-column-container {
+.grid-container {
     width: 1000px;
-    height: auto;
-    overflow-x: auto;
+    height: 2000px;
+    padding: 25px;
 }
 
-.grid-column {
+.time-series-grid-container {
+    width: 100%;
+    height: 100%;
+}
+
+.time-series-grid-header {
+    width: 1000px;
+    height: 45px;
+    background: lightgrey;
+}
+
+.time-series-grid-row {
+    width: 1000px;
+    height: 40px;
+    border-bottom: 1px solid lightgrey;
+}
+
+.header {
+    /*font-weight: bold;*/
+    border-bottom: 2px solid grey;
+
+}
+
+.time-series-grid-value {
+    margin: 5px;
+    height: 30px;
+    width: 170px;
     float: left;
-    width: auto;
-    height: auto;
-}
-
-.grid-timestamp {
-    width: 175px;
-    height: 25px;
-    inline-height: 25px;
-    text-align: center;
-}
-
-.grid-timestamp:hover { cursor: default; }
-
-.grid-value {
-    width: 125px;
-    height: 25px;
-    inline-height: 25px;
     text-align: right;
 }
 
-.grid-value:hover { cursor: default; }
+.time-series-grid-value:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
+}
 
+.time-series-grid-value:hover { cursor: default; }
