--- a/studio/public/scripts/components/grids/timeSeriesGrid.html
+++ b/studio/public/scripts/components/grids/timeSeriesGrid.html
@@ -1,10 +1,15 @@
-<div class="grid-column-container">
-    <div class="grid-column" ng-repeat="column in showing track by $index" ng-switch on="$index">
-        <div class="grid-timestamp" ng-repeat="value in column track by $index" ng-switch-when="0">
-            {{value}}
+<div class="grid-container" >
+
+    <div class="time-series-grid-container">
+
+        <div class="time-series-grid-row ng-class:{ header: $index==0 }" ng-repeat="row in showing">
+
+            <div class="time-series-grid-value" ng-repeat="value in row">
+                {{value}}
+            </div>
+
         </div>
-        <div class="grid-value" ng-repeat="value in column track by $index" ng-switch-default>
-            {{value}}
-        </div>
+
     </div>
+
 </div>
