--- a/studio/public/scripts/components/grids/timeSeriesGrid.html
+++ b/studio/public/scripts/components/grids/timeSeriesGrid.html
@@ -1,4 +1,4 @@
-<div class="grid-container" >
+<div class="grid-container" ng-style="{width: gridWidth}">
 
     <div class="time-series-grid-container">
 
