--- a/studio/public/stylesheets/site.css
+++ b/studio/public/stylesheets/site.css
@@ -425,8 +425,8 @@ body { font-family: Roboto, arial, sans-serif; background-color: #c5c5c5; overfl
 
 #chart-wrapper { position: absolute; top: 28px; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
 #chart-container { position: absolute; left: 0; height: -webkit-calc(100% - 28px); width: 100%; overflow: hidden; }
-#time-series-chart { display: block; position: relative; width: 100%; height: 100%; }
-#time-series-grid-container { display: block; position: relative; width: 100%; height: 100%; overflow: auto; }
+#time-series-chart { display: block; position: relative; width: 100%; height: 100%; background: white; }
+#time-series-grid-container { display: block; position: relative; width: 100%; height: 100%; overflow: auto; background: white; }
 
 .axis path,
 .axis line {
