--- a/studio/public/scripts/components/blockDataViewer/blockDataViewer.html
+++ b/studio/public/scripts/components/blockDataViewer/blockDataViewer.html
@@ -8,7 +8,7 @@
 
         <div class="block-data-page ng-class:{'page-left': pagingForward, 'page-right': pagingForward==false}" ng-repeat="page in pages" ng-hide="!isCurrentPage($index)" ng-switch on="page.name">
 
-            <div class="grid-container" ng-switch-when="Statistics">
+            <div class="stats-grid-container" ng-switch-when="Statistics">
 
                 <div class="grid-fixed-col">
                     <div class="grid-fixed-cell grid-fixed-cell-header">&nbsp;</div>
